--- a/src/app/components/drop-menu-header/drop-menu-header.component.html
+++ b/src/app/components/drop-menu-header/drop-menu-header.component.html
@@ -1,3 +1,6 @@
+<!--Menu Sorts Files-->
 
-<!--<p-dropdown [options]="cities" [(ngModel)]="selectedCity" optionLabel="name"></p-dropdown>-->
+<p-dropdown [options]="sorts" [(ngModel)]="selectedSort" optionLabel="name" [dropdownIcon]="'pi pi-sort-amount-down'"  placeholder="SORT BY"  ></p-dropdown>
+
+<br> <br>
 
