--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<app-header></app-header>
+<app-header>
+
+</app-header>
 <div class="main flex flex-row ">
+
 
   <app-root-folder-list class="w-1/6"></app-root-folder-list>
   <app-file-list class="w-4/6"></app-file-list>
+
+
+
 </div>
 
 
