--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,21 @@
-<app-header>
-
-</app-header>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+<app-header></app-header>
 <div class="main flex flex-row ">
-
-
   <app-root-folder-list class="w-1/6"></app-root-folder-list>
   <app-file-list class="w-4/6"></app-file-list>
-
-
-
 </div>
+</body>
+</html>
+
+
 
 
