--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,12 @@
 
-  <div class="wrapper 	">
+  <div class="wrapper">
     <div class="border-b-2 border-indigo-500">
-      <div class="header mx-5  flex flex-row justify-around ">
+      <div class="header   flex flex-row justify-around ">
         <p class="font-bold px-2 py-8 text-blue-500">ASSET MANAGER</p>
 
         <button pButton  type="button"  class="p-button-text">< Back</button>
+
+        <p-panelMenu class = "pt-4" [model]="items"  appendTo="body"></p-panelMenu>
 
 
           <app-drop-menu-header class="mt-4"></app-drop-menu-header>
@@ -17,8 +19,9 @@
 
         <span class="p-input-icon-left mt-4">
 
+           <i class="pi pi-search" style="font-size: 1rem"></i>
             <input type="text" pInputText  placeholder="Search">
-            <i class="pi pi-search" style="font-size: 1.3rem"></i>
+
 
         </span>
       </div>
