--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,9 @@
 <div class="main flex flex-row ">
   <app-root-folder-list class="w-1/6"></app-root-folder-list>
   <app-file-list class="w-4/6"></app-file-list>
+  <app-folder-details class="w-1/6"></app-folder-details>
 </div>
+
 </body>
 </html>
 
