Added file-list component

--- a/src/app/components/file-list/file-list.component.html
+++ b/src/app/components/file-list/file-list.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper  ">
-  <div class="border-b-2 border-r-2 border-indigo-500 h-full">
+
+  <div class="border-b-2 border-indigo-500 h-full">
       <div class="line flex flex-col items-baseline pt-2 pb-2 mx-5 ">
         <div class="flex items-baseline w-full py-2">
               <input class= "h-4 w-4" type="checkbox"  value="yes">
@@ -25,6 +25,34 @@
         <div class="flex items-baseline w-full py-2">
           <input class= "h-4 w-4" type="checkbox"  value="yes">
           <i class="pi pi-file pl-4 "></i>
+          <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v3.pdf</p>
+          <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 20, May 2022 4:51pm</p>
+          <i class="pi pi-ellipsis-v pl-4 "></i>
+        </div>
+        <div class="flex items-baseline w-full py-2">
+          <input class= "h-4 w-4" type="checkbox"  value="yes">
+          <i class="pi pi-file pl-4 "></i>
+          <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v5.pdf</p>
+          <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 22, May 2022 4:51pm</p>
+          <i class="pi pi-ellipsis-v pl-4 "></i>
+        </div>
+        <div class="flex items-baseline w-full py-2">
+          <input class= "h-4 w-4" type="checkbox"  value="yes">
+          <i class="pi pi-file pl-4 "></i>
+          <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v7.pdf</p>
+          <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 21, May 2022 4:51pm</p>
+          <i class="pi pi-ellipsis-v pl-4 "></i>
+        </div>
+        <div class="flex items-baseline w-full py-2">
+          <input class= "h-4 w-4" type="checkbox"  value="yes">
+          <i class="pi pi-file pl-4 "></i>
+          <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v8.pdf</p>
+          <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 28, May 2022 4:51pm</p>
+          <i class="pi pi-ellipsis-v pl-4 "></i>
+        </div>
+        <div class="flex items-baseline w-full py-2">
+          <input class= "h-4 w-4" type="checkbox"  value="yes">
+          <i class="pi pi-file pl-4 "></i>
           <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">Favicon.png</p>
           <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 28, May 2022 4:51pm</p>
           <i class="pi pi-ellipsis-v pl-4 "></i>
@@ -38,4 +66,4 @@
         </div>
       </div>
   </div>
-</div>
+
