Added drag-drop-actions-panel component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   <app-file-list class="w-9/12"></app-file-list>
   <app-folder-details class="w-3/12"></app-folder-details>
 </div>
-
+<app-drag-drop-actions-panel></app-drag-drop-actions-panel>
 </body>
 </html>
 
