--- a/src/app/components/drag-drop-actions-panel/drag-drop-actions-panel.component.html
+++ b/src/app/components/drag-drop-actions-panel/drag-drop-actions-panel.component.html
@@ -1,1 +1,15 @@
-<p>drag-drop-actions-panel works!</p>
+<div class="text-center my-5 text-2xl font-semibold">
+
+  <p>You can drag and drop your files here or,
+    <br>
+
+    <a href="#" class="underline underline-offset-1">browse to upload</a>
+    <br>
+
+    <i class="pi pi-upload pt-3" style="font-size: 3rem"></i>
+  </p>
+
+</div>
+
+
+
