--- a/src/app/components/file-list/file-list.component.html
+++ b/src/app/components/file-list/file-list.component.html
@@ -1,69 +1,72 @@
 
   <div class="border-b-2 border-indigo-500 h-full">
-      <div class="line flex flex-col items-baseline pt-2 pb-2 mx-5 ">
-        <div class="flex items-baseline w-full py-2">
-              <input class= "h-4 w-4" type="checkbox"  value="yes">
+      <div class="line flex flex-col pt-2 pb-2 mx-5 ">
+        <div class="flex items-center w-full py-2">
+          <p-checkbox name="groupname" value="val1" [(ngModel)]="selectedValues"></p-checkbox>
+
               <i class="pi pi-file pl-4 "></i>
               <p class=" text-2xl px-3 my-0  w-8/12 truncate">Picture_1.png</p>
               <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 25, May 2022 4:51pm</p>
               <i class="pi pi-ellipsis-v pl-4 truncate hover:text-clip"></i>
         </div>
-        <div class="flex items-baseline w-full py-2">
-          <input class= "h-4 w-4" type="checkbox"  value="yes">
+        <div class="flex items-center w-full py-2">
+          <p-checkbox name="groupname" value="val2" [(ngModel)]="selectedValues"></p-checkbox>
           <i class="pi pi-file pl-4 "></i>
           <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">Picture_123333.png</p>
           <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 26, May 2022 4:51pm</p>
           <i class="pi pi-ellipsis-v pl-4 "></i>
         </div>
-        <div class="flex items-baseline w-full py-2">
-          <input class= "h-4 w-4" type="checkbox"  value="yes">
+        <div class="flex items-center w-full py-2">
+          <p-checkbox name="groupname" value="val3" [(ngModel)]="selectedValues"></p-checkbox>
           <i class="pi pi-file pl-4 "></i>
           <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v2.pdf</p>
           <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 27, May 2022 4:51pm</p>
           <i class="pi pi-ellipsis-v pl-4 "></i>
         </div>
-        <div class="flex items-baseline w-full py-2">
-          <input class= "h-4 w-4" type="checkbox"  value="yes">
+        <div class="flex items-center w-full py-2">
+          <p-checkbox name="groupname" value="val4" [(ngModel)]="selectedValues"></p-checkbox>
           <i class="pi pi-file pl-4 "></i>
           <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v3.pdf</p>
           <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 20, May 2022 4:51pm</p>
           <i class="pi pi-ellipsis-v pl-4 "></i>
         </div>
-        <div class="flex items-baseline w-full py-2">
-          <input class= "h-4 w-4" type="checkbox"  value="yes">
+        <div class="flex items-center w-full py-2">
+          <p-checkbox name="groupname" value="val5" [(ngModel)]="selectedValues"></p-checkbox>
           <i class="pi pi-file pl-4 "></i>
           <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v5.pdf</p>
           <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 22, May 2022 4:51pm</p>
           <i class="pi pi-ellipsis-v pl-4 "></i>
         </div>
-        <div class="flex items-baseline w-full py-2">
-          <input class= "h-4 w-4" type="checkbox"  value="yes">
+        <div class="flex items-center w-full py-2">
+          <p-checkbox name="groupname" value="val6" [(ngModel)]="selectedValues"></p-checkbox>
           <i class="pi pi-file pl-4 "></i>
           <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v7.pdf</p>
           <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 21, May 2022 4:51pm</p>
           <i class="pi pi-ellipsis-v pl-4 "></i>
         </div>
-        <div class="flex items-baseline w-full py-2">
-          <input class= "h-4 w-4" type="checkbox"  value="yes">
+        <div class="flex items-center w-full py-2">
+          <p-checkbox name="groupname" value="val7" [(ngModel)]="selectedValues"></p-checkbox>
           <i class="pi pi-file pl-4 "></i>
           <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">PDF_presentaion-v8.pdf</p>
           <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 28, May 2022 4:51pm</p>
           <i class="pi pi-ellipsis-v pl-4 "></i>
         </div>
-        <div class="flex items-baseline w-full py-2">
-          <input class= "h-4 w-4" type="checkbox"  value="yes">
+        <div class="flex items-center w-full py-2">
+          <p-checkbox name="groupname" value="val8" [(ngModel)]="selectedValues"></p-checkbox>
           <i class="pi pi-file pl-4 "></i>
           <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">Favicon.png</p>
           <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 28, May 2022 4:51pm</p>
           <i class="pi pi-ellipsis-v pl-4 "></i>
         </div>
-        <div class="flex items-baseline w-full py-2">
-          <input class= "h-4 w-4" type="checkbox"  value="yes">
-          <i class="pi pi-file pl-4 "></i>
-          <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">Picture_of_goods_line2020_landscape_for_presentation2022_v1222.png</p>
-          <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 29, May 2022 4:51pm</p>
-          <i class="pi pi-ellipsis-v pl-4 "></i>
-        </div>
+          <div class="flex items-center w-full py-2">
+            <p-checkbox name="groupname" value="val9" [(ngModel)]="selectedValues"></p-checkbox>
+            <i class="pi pi-file pl-4 "></i>
+            <p class=" text-2xl px-3 my-0  w-8/12 truncate hover:text-clip">Picture_of_goods_line2020_landscape_for_presentation2022_v1222.png</p>
+            <p class=" text-m px-3  w-3/12 truncate hover:text-clip">Fri 29, May 2022 4:51pm</p>
+            <i class="pi pi-ellipsis-v pl-4 "></i>
+          </div>
+
       </div>
+
   </div>
 
