--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,13 +19,11 @@
 
 
 
-        <span class="p-input-icon-left">
-
-           <i class="pi pi-search" style="font-size: 1rem"></i>
+        <span class="p-input-icon-right">
+           <i class="pi pi-search"  style="font-size: 1rem"></i>
             <input type="text" pInputText  placeholder="Search">
-
-
         </span>
+
       </div>
     </div>
   </div>
